name:                mpster
version:             0.1.0.0
synopsis:            Website voor Magali Penduccio
homepage:            http://www.mpster.nl
license:             AllRightsReserved
author:              Matthias Pronk
maintainer:          mail@masida.nl
copyright:           Magali Penduccio
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  build-depends:       base
                     , hakyll
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
